<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.example.imdbmovieapp.MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:contentDescription="@string/app_name"
       android:foreground="@drawable/imdb_main"
       android:layout_margin="5dp"
       android:id="@+id/iv_MainImage"
       android:src="@drawable/imdb_main" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:hint="@string/hint"
        android:id="@+id/tv_FindMovies" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/spinner" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:id="@+id/btn_SearchIMDb"
        android:background="@drawable/shape"
        android:text="@string/btn_Search"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
         />
</LinearLayout>
